Fix some minor clipping issues

--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -15,6 +15,7 @@ h1 {
   position: relative;
   overflow: hidden;
   max-width: 800px;
+  padding: 8px;
   margin: 48px auto;
 }
 
@@ -25,6 +26,17 @@ h1 {
   padding: 8px;
   background-color: transparent;
   box-sizing: border-box;
+}
+
+.selections {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 3px;
+  margin: 8px;
+  overflow: hidden;
+  z-index: -1;
 }
 
 .selection-indicator {
